--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -15,9 +15,10 @@
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
             <a class="link-secondary" href="#">Login</a>
+            <a class="link-secondary m-lg-2" href="/memberSave">회원가입</a>
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#"><strong>Hi My Buddy</strong></a>
+            <a class="blog-header-logo text-dark" href="/home"><strong>Hi My Buddy</strong></a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="link-secondary" href="#" aria-label="Search">
@@ -30,11 +31,11 @@
 
       <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-          <a class="p-2 link-secondary" href="#">입양소식</a>
-          <a class="p-2 link-secondary" href="#">입양신청</a>
-          <a class="p-2 link-secondary" href="#">분양등록</a>
-          <a class="p-2 link-secondary" href="#">임시보호 소식</a>
-          <a class="p-2 link-secondary" href="#">친구를 찾아요</a>
+          <a class="p-2 link-secondary" href="#" ><strong>입양소식</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>입양신청</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>분양등록</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>임시보호 소식</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>친구를 찾아요</strong></a>
         </nav>
       </div>
     </div>
