--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="header" >
 
   <meta charset="UTF-8">
@@ -14,11 +14,20 @@
       <header class="blog-header lh-1 py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
-            <a class="link-secondary" href="#">Login</a>
+            <a class="blog-header-logo text-dark" style="margin-right: 50px" href="/" ><strong>Hi My Buddy</strong></a>
+              <div th:if="${session.loginEmail}">
+                  <a href="" class="link-secondary">myPage</a>
+                  <a href="" class="link-secondary">로그아웃</a>
+                  <h4 th:text="${session.loginEmail}"></h4><h4>님 환영합니다.</h4>
+              </div>
+              <div th:unless="${session.loginEmail}">
+            <a class="link-secondary" href="/memberLogin">Login</a>
             <a class="link-secondary m-lg-2" href="/memberSave">회원가입</a>
+              </div>
+
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="/home"><strong>Hi My Buddy</strong></a>
+<!--            <a class="blog-header-logo text-dark" href="/home" ><strong>Hi My Buddy</strong></a>-->
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="link-secondary" href="#" aria-label="Search">
@@ -33,7 +42,7 @@
         <nav class="nav d-flex justify-content-between">
           <a class="p-2 link-secondary" href="#" ><strong>입양소식</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>입양신청</strong></a>
-          <a class="p-2 link-secondary" href="#" ><strong>분양등록</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>입양등록</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>임시보호 소식</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>친구를 찾아요</strong></a>
         </nav>
