반려견 연관관계로 등록 구현

--- a/src/main/resources/templates/dog/dogSaveSuccess.html
+++ b/src/main/resources/templates/dog/dogSaveSuccess.html
@@ -18,50 +18,12 @@
 </head>
 <body>
 <th:block th:replace="header/header :: header"></th:block>
-<div class="container mt-5 mb-5"><h1><strong>마이 페이지</strong></h1></div>
-<div class="container mb-5">
-<table class="table table-success table-striped" >
-  <tr>
-    <th>id:</th>
-    <td th:text="${member.id}"> </td>
-  </tr>
-  <tr>
-    <th>이메일:</th>
-    <td th:text="${member.memberEmail}"></td>
-  </tr>
-  <tr>
-    <th>이름:</th>
-    <td th:text="${member.memberName}"></td>
-  </tr>
-  <tr>
-    <th>나이:</th>
-    <td th:text="${member.memberAge}"></td>
-  </tr>
-  <tr>
-    <th>지역:</th>
-    <td th:text="${member.memberArea}"></td>
-  </tr>
-  <tr>
-    <th>연락처:</th>
-    <td th:text="${member.memberPhone}"></td>
-  </tr>
-  <tr>
-    <th>가입날짜:</th>
-    <td th:text="*{#temporals.format(member.memberSaveTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
-  </tr>
-  <tr>
-    <th>반려 친구</th>
-    <td><h2>현재 등록된 반려 친구가 없습니다.</h2></td>
-  </tr>
-  <tr>
-    <th>반려견 등록</th>
-    <td><a href="/dogSave" class="btn btn-success">등록하기!</a></td>
-  </tr>
-
-</table>
+<div class="container mt-5">
+  <h2 style="text-align: center">반려친구 <br> 등록을 <br> 축하드립니다! <br> 이제 관련상품들을 <br> 확인 할 수 있습니다!! <br>
+    <a href="/">메인으로 가기!</a></h2>
 </div>
 <div style="background-color: #d1f6a7">
-  <div class="container mt-5" >
+  <div class="container" >
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">입양소식</a></li>
