--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -14,7 +14,7 @@
       <header class="blog-header lh-1 py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
-            <a class="blog-header-logo text-dark" style="margin-right: 50px" href="/" ><strong>Hi My Buddy</strong></a>
+            <a class="blog-header-logo text-dark" style="margin-right: 50px" href="/" ><strong>♥Hi My Buddy♥</strong></a>
               <div th:if="${session.loginEmail}">
                   <a th:href="@{|/memberDetail/${session.loginEmail}|}" class="link-secondary">myPage</a>
                   <a href="/memberLogout" class="link-secondary">로그아웃</a>
