--- a/src/main/resources/templates/member/memberDetail.html
+++ b/src/main/resources/templates/member/memberDetail.html
@@ -50,6 +50,42 @@
     <td th:text="*{#temporals.format(member.memberSaveTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
   </tr>
   <tr>
+    <th>성별:</th>
+    <td th:text="${member.memberGender}"></td>
+  </tr>
+  <tr>
+    <th>회원가입의 목적:</th>
+    <td th:text="${member.memberPurpose}"></td>
+  </tr>
+  <div th:if="${dog}">
+<!--    <tr th:if="${dog.fileAttached == 1}">-->
+    <tr>
+      <th>친구 사진:</th>
+      <td><img th:src="@{|/upload/${dog.storedFileName}}" alt="" width="200" height="200"></td>
+    </tr>
+<!--    <tr th:unless="${dog.fileAttached == 0}">-->
+<!--      <th>친구 사진:</th>-->
+<!--      <td>등록된 사진이 없어요!</td>-->
+<!--    </tr>-->
+    <tr>
+      <th>친구의 이름:</th>
+      <td th:text="${dog.dogName}"></td>
+    </tr>
+    <tr>
+      <th>친구의 종:</th>
+      <td th:text="${dog.dogSpecies}"></td>
+    </tr>
+    <tr>
+      <th>친구의 나이:</th>
+      <td th:text="${dog.dogAge}"></td>
+    </tr>
+    <tr>
+      <th>친구의 몸무게:</th>
+      <td th:text="${dog.dogWeight}"></td>
+    </tr>
+  </div>
+  <div th:unless="${dog}">
+  <tr>
     <th>반려 친구</th>
     <td><h2>현재 등록된 반려 친구가 없습니다.</h2></td>
   </tr>
@@ -57,6 +93,7 @@
     <th>반려견 등록</th>
     <td><a href="/dogSave" class="btn btn-success">등록하기!</a></td>
   </tr>
+  </div>
 
 </table>
 </div>
