입양글 등록 및 리스트 조회 구현

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,6 @@
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.rtl.min.css}">
     <script th:src="@{/js/jqurey.js}"></script>
-
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap');
         /* 폰트 적용 */
@@ -14,17 +13,18 @@
             font-size: 30px;
 
             }
+
     </style>
 </head>
 <body>
 <th:block th:replace="header/header :: header"></th:block>
 <main class="container mt-5">
-<div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://ggsc.s3.amazonaws.com/images/uploads/The_Science-Backed_Benefits_of_Being_a_Dog_Owner.jpg'); background-size: cover">
-    <div class="col-md-6 px-0">
-        <h1 class="display-4 fst-italic" style="color: white" >지금 <br> 소중한 <br> 내 친구가 <br> 기다리고 <br> 있어요</h1>
-        <p class="lead my-3" style="color: white">갈 곳 없는 <br> 아이들의 하나뿐인 <br> 친구가 되어주세요</p>
+<div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://img.freepik.com/free-vector/cute-pets-illustration_53876-112522.jpg?w=1480&t=st=1672097996~exp=1672098596~hmac=591335a81a523aae30468e1359c4537a46bad72f59aaf610290d4156fd177d2c');background-size: cover">
+    <div class="col-md-6 px-0" >
+        <h1 class="display-4 fst-italic" style="color: black" >지금 <br> 소중한 <br> 내 친구가 <br> 기다리고 <br> 있어요</h1>
+        <p class="lead my-3" style="color: black">갈 곳 없는 <br> 아이들의 하나뿐인 <br> 친구가 되어주세요</p>
         <p class="lead mb-0">
-            <a href="#" class="text-white fw-bold">
+            <a href="#" class="text-black fw-bold">
             입양신청하기!
             </a>
         </p>
@@ -36,38 +36,38 @@
         </div>
     </div>
 </div>
-<div class="row mb-2">
+<div class="row mb-2 mt-5" style="margin-top: 100px; margin-bottom: 150px">
     <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-primary">입양신청</strong>
+                <strong class="d-inline-block mb-2 text-black">입양신청</strong>
                 <h3 class="mb-0">입양신청 방법</h3>
                 <div class="mb-1 text-muted">설명</div>
                 <p class="card-text mb-auto">반려 친구를 입양 할 수 있습니다. <br> 자세한 내용을 클릭하여 확인해 주세요.</p>
 <!--                <a href="#" class="stretched-link">클릭</a>-->
             </div>
             <div class="col-auto d-none d-lg-block">
-                <img src="https://pbs.twimg.com/media/FZfgB7VUYAAtGiz?format=jpg&name=900x900" alt="" style="width: 250px; height: 250px">
+                <img src="https://cdn-icons-png.flaticon.com/512/107/107354.png?w=826&t=st=1672098555~exp=1672099155~hmac=8b8142f5f81d0ebeff6e429267c42154e48a431febe53bfc554743069fbb6811" alt="" style="width: 250px; height: 250px">
             </div>
         </div>
     </div>
     <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-success">분양등록</strong>
+                <strong class="d-inline-block mb-2 text-black">분양등록</strong>
                 <h3 class="mb-0">분양신청 방법</h3>
                 <div class="mb-1 text-muted">설명</div>
                 <p class="mb-auto">내 친구를 더 좋은 환경으로 보내줄 수 있습니다. <br> 자세한 내용을 클릭하여 확인해 주세요.</p>
 <!--                <a href="#" class="stretched-link">클릭</a>-->
             </div>
             <div class="col-auto d-none d-lg-block">
-                <img src="https://people.com/thmb/5uLym456xzuJ5MwbPIdTJiyGoSE=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(904x0:906x2)/pug-1-0d4c0f988e3d421ca4954917b1450664.jpg" alt="" style="width: 250px; height: 250px">
+                <img src="https://cdn-icons-png.flaticon.com/512/84/84813.png?w=826&t=st=1672098589~exp=1672099189~hmac=23db387df2c28a331f985edaa74e74ca33b5abe1e3d7b5f494f61eab6ff82156" alt="" style="width: 250px; height: 250px">
             </div>
         </div>
     </div>
 </div>
 </main>
-<div style="background-color: #d1f6a7">
+<div>
 <div class="container" >
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
