--- a/src/main/resources/templates/member/memberDetail.html
+++ b/src/main/resources/templates/member/memberDetail.html
@@ -108,7 +108,7 @@
     </table>
   </div>
 </div>
-<div style="background-color: #d1f6a7">
+<div >
   <div class="container mt-5" >
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
