--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -4,17 +4,15 @@
 
   <meta charset="UTF-8">
   <title>Title</title>
-
   <style>
 
   </style>
-
-  <div style="background-color: #d1f6a7">
+  <div th:value="${session.loginEmail}" hidden id="session"></div>
+  <div >
     <div class="container">
       <header class="blog-header lh-1 py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
-            <a class="blog-header-logo text-dark" style="margin-right: 50px" href="/" ><strong>♥Hi My Buddy♥</strong></a>
               <div th:if="${session.loginEmail}">
                   <a th:href="@{|/memberDetail/${session.loginEmail}|}" class="link-secondary">myPage</a>
                   <a href="/memberLogout" class="link-secondary">로그아웃</a>
@@ -24,10 +22,9 @@
             <a class="link-secondary" href="/memberLogin">Login</a>
             <a class="link-secondary m-lg-2" href="/memberSave">회원가입</a>
               </div>
-
           </div>
           <div class="col-4 text-center">
-<!--            <a class="blog-header-logo text-dark" href="/home" ><strong>Hi My Buddy</strong></a>-->
+              <h2><strong>Hi My Buddy</strong></h2>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="link-secondary" href="#" aria-label="Search">
@@ -39,13 +36,24 @@
       </header>
 
       <div class="nav-scroller py-1 mb-2">
-        <nav class="nav d-flex justify-content-between">
-          <a class="p-2 link-secondary" href="#" ><strong>입양소식</strong></a>
+          <div th:if="${session.loginEmail}">
+            <nav class="nav d-flex justify-content-between">
+          <a class="p-2 link-secondary" href="#" ><strong>입양글</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>입양신청</strong></a>
-          <a class="p-2 link-secondary" href="#" ><strong>입양등록</strong></a>
-          <a class="p-2 link-secondary" href="#" ><strong>임시보호 소식</strong></a>
-          <a class="p-2 link-secondary" href="#" ><strong>친구를 찾아요</strong></a>
-        </nav>
+          <a class="p-2 link-secondary" th:href="@{|/adoptSave/${session.loginEmail}|}"><strong>입양등록</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>반려용품</strong></a>
+          <a class="p-2 link-secondary" href="#" ><strong>FAQ</strong></a>
+            </nav>
+          </div>
+          <div th:unless="${session.loginEmail}">
+            <nav class="nav d-flex justify-content-between">
+            <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>입양글</strong></a>
+            <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>입양신청</strong></a>
+            <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>입양등록</strong></a>
+            <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>반려용품</strong></a>
+            <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>FAQ</strong></a>
+            </nav>
+          </div>
       </div>
     </div>
   </div>
@@ -53,4 +61,8 @@
 <body>
 
 </body>
+<script>
+
+
+</script>
 </html>
