--- a/src/main/resources/templates/member/memberLogin.html
+++ b/src/main/resources/templates/member/memberLogin.html
@@ -15,8 +15,9 @@
     #memberLoginForm{
       margin-left: auto;
       margin-right: auto;
+      margin-top: 100px;
       font-size:30px;
-      width: 800px;
+      width: 500px;
     }
   </style>
 </head>
@@ -30,8 +31,22 @@
     비밀번호 입력
     <input type="text" class="form-control" placeholder="비밀번호를 입력해주세요!" name="memberPass" id="pass">
     <br>
-    <input type="button" class="btn btn-success" value="로그인" onclick="memberLogin()">
+    <input type="button" class="btn btn-primary" value="로그인" onclick="memberLogin()">
   </form>
+</div>
+<div >
+  <div class="container mt-5" style="margin-top: 300px" >
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">입양소식</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">입양신청</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">분양등록</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">임시보호 소식</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">친구를 찾아요</a></li>
+      </ul>
+      <p class="text-center text-muted">2022 JinSeok Project </p>
+    </footer>
+  </div>
 </div>
 </body>
 <script>
