--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
 <body>
 <th:block th:replace="header/header :: header"></th:block>
 <main class="container mt-5">
-<div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://img.freepik.com/free-vector/cute-pets-illustration_53876-112522.jpg?w=1480&t=st=1672097996~exp=1672098596~hmac=591335a81a523aae30468e1359c4537a46bad72f59aaf610290d4156fd177d2c');background-size: cover">
+<div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://img.freepik.com/free-vector/cute-pets-illustration_53876-112522.jpg?w=1480&t=st=1672097996~exp=1672098596~hmac=591335a81a523aae30468e1359c4537a46bad72f59aaf610290d4156fd177d2c');background-size: cover; margin-top: 100px">
     <div class="col-md-6 px-0" >
         <h1 class="display-4 fst-italic" style="color: black" >지금 <br> 소중한 <br> 내 친구가 <br> 기다리고 <br> 있어요</h1>
         <p class="lead my-3" style="color: black">갈 곳 없는 <br> 아이들의 하나뿐인 <br> 친구가 되어주세요</p>
@@ -36,6 +36,7 @@
         </div>
     </div>
 </div>
+    <div style="margin-top: 200px">
 <div class="row mb-2 mt-5" style="margin-top: 100px; margin-bottom: 150px">
     <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -66,9 +67,10 @@
         </div>
     </div>
 </div>
+    </div>
 </main>
 <div>
-<div class="container" >
+<div class="container" style="margin-top: 100px" >
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">입양소식</a></li>
