--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,7 +45,8 @@
                 <h3 class="mb-0">입양신청 방법</h3>
                 <div class="mb-1 text-muted">설명</div>
                 <p class="card-text mb-auto">반려 친구를 입양 할 수 있습니다. <br> 자세한 내용을 클릭하여 확인해 주세요.</p>
-<!--                <a href="#" class="stretched-link">클릭</a>-->
+
+                <a href="/adopt" class="stretched-link">클릭</a>
             </div>
             <div class="col-auto d-none d-lg-block">
                 <img src="https://cdn-icons-png.flaticon.com/512/107/107354.png?w=826&t=st=1672098555~exp=1672099155~hmac=8b8142f5f81d0ebeff6e429267c42154e48a431febe53bfc554743069fbb6811" alt="" style="width: 250px; height: 250px">
