검색 후 페이징 처리 구현

--- a/src/main/resources/templates/adopt/adoptPaging.html
+++ b/src/main/resources/templates/adopt/adoptPaging.html
@@ -21,7 +21,7 @@
     <h2><strong>분양 글 목록</strong></h2>
 </div>
 <div class="container" style="width: 1500px; margin-left: auto; margin-right: auto;" >
-    <form action="/adoptSearch" method="post" class="form-group mt-5" style="float: left;margin-bottom: 50px">
+    <form action="/adoptSearchPaging" method="post" class="form-group mt-5" style="float: left;margin-bottom: 50px">
         <select name="type" class="form-select-lg">
             <option value="adoptSpecies">분양 종</option>
             <option value="adoptArea">분양 지역</option>
