--- a/src/main/resources/templates/adopt/adoptPaging.html
+++ b/src/main/resources/templates/adopt/adoptPaging.html
@@ -40,6 +40,7 @@
             <th scope="col">분양지역</th>
             <th scope="col">분양 종</th>
             <th scope="col">글작성 시간</th>
+            <th scope="col">상세조회</th>
         </tr>
         </thead>
         <tbody>
@@ -50,6 +51,7 @@
             <td th:text="${adopt.adoptArea}"></td>
             <td th:text="${adopt.adoptSpecies}"></td>
             <td th:text="*{#temporals.format(adopt.adoptSaveTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+            <td><a th:href="@{|/adoptDetail/${adopt.id}|}" class="text-black">조회</a></td>
         </tr>
         </tbody>
     </table>
